# Kiwi-LLaMA

./: README.md  flake.nix  inference.py  pyproject.toml  requirements.txt  test.ipynb  train.py
data/: BIO_TO_INSTRUCT_NER.ipynb  BRAT_TO_INSTRUCT_RE.ipynb  NER_main_dev.csv  NER_main_train.csv  RE_dev.csv  RE_train.csv
data/e2e/: MTSample_test.tsv
data/test/MIMIC3/brat/: 256.ann  267.ann  283.ann  294.ann  298.ann  304.ann  311.ann  326.ann  340.ann  351.ann  356.ann  365.ann  375.ann  389.ann  392.ann  397.ann  406.ann  615.ann  622.ann  632.ann  636.ann  654.ann  668.ann  681.ann  686.ann
data/test/MTSample/bio/: 131_20210112211711.bio  140_20210112211712.bio  151_20210112211713.bio  154_20210112211713.bio  157_20210112211713.bio  160_20210112211715.bio  166_20210112211715.bio  169_20210112211715.bio  173_20210112211716.bio  4_20210112211655.bio  (+40 more)
kiwillama/: __main__.py  constants.py  inference.py  settings.py  train.py  utils.py
output/NER/: 1.html  10.html  100.html  1001.html  1002.html  1003.html  1004.html  1005.html  1006.html  1007.html  1008.html  101.html  1010.html  1012.html  1013.html  1014.html  1016.html  1017.html  1018.html  102.html  1020.html  1022.html  1024.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  1033.html  1034.html  1035.html  1036.html  1037.html  1038.html  1039.html  104.html  1040.html  (+2304 more)
wandb/: latest-run
wandb/run-20241204_101149-88xjtn3l/: run-88xjtn3l.wandb
wandb/run-20241204_101149-88xjtn3l/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
(+2424 files in other folders)
